--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>FAO-Powered Foodprint Calculator</title>
 	<style>
 		body {
 			font-family: Arial, Helvetica, sans-serif;
