--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FAO-Powered Foodprint Calculator Results</title>
+    <title>Foodprint Calculator Results</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
