--- a/templates/result.html
+++ b/templates/result.html
@@ -72,6 +72,12 @@
             font-size: 24px;
             margin: 20px 0;
         }
+        .result-image {
+            width: 300px;
+            height: auto;
+            margin: 10px auto;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -91,6 +97,9 @@
                 {% endif %}
             </div>
         </div>
+        {% if image_file %}
+        <img src="{{ url_for('static', filename='images/' + image_file) }}" alt="Result Image" class="result-image">
+        {% endif %}
         <a href="/">
             <button class="button">Back</button>
         </a>
