--- a/templates/result.html
+++ b/templates/result.html
@@ -63,7 +63,7 @@
             margin: 20px 0;
         }
         .co2-text-yellow {
-            color: #FFD700;
+            color: #ffe23c;
             font-size: 24px;
             margin: 20px 0;
         }
